PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2016, PHP 5.6.19

04 Feb 2016, PHP 5.6.18

- Core:
  . Fixed bug #71201 (round() segfault on 64-bit builds). (Anatol)
  . Fixed bug #71089 (No check to duplicate zend_extension). (Remi)
  . Added support for new HTTP 451 code. (Julien)
  . Fixed bug #71273 (A wrong ext directory setup in php.ini leads to crash).
    (Anatol);

- Apache2handler:
  . Fix >2G Content-Length headers in apache2handler. (Adam Harvey)

- FTP:
  . Implemented FR #55651 (Option to ignore the returned FTP PASV address).
    (abrender at elitehosts dot com)

- Opcache:
  . Fixed bug #71127 (Define in auto_prepend_file is overwrite). (Laruence)
  . Fixed bug #71024 (Unable to use PHP 7.0 x64 side-by-side with PHP 5.6 x32
    on the same server). (Anatol)

- Session:
  . Improved fix for bug #68063 (Empty session IDs do still start sessions). (Yasuo)
  . Fixed bug #69111 (Crash in SessionHandler::read()). (Yasuo)
  . Fixed bug #71122 (Session GC may not remove obsolete session data). (Yasuo)
  . Fixed bug #71038 (session_start() returns TRUE on failure).
    It's fixed partially on PHP 5.6. It still returns TRUE on session read
    failure for compatibility. Session save handlers should return 'string'
    always for successful read. i.e. Non-existing session read must return
    empty string. PHP 7.0 is made not to tolerate buggy return value. (Yasuo)

- SOAP:
  . Fixed bug #70979 (crash with bad soap request). (Anatol)

- SPL:
  . Fixed bug #71204 (segfault if clean spl_autoload_funcs while autoloading).
    (Laruence)

- Standard:
  . Fixed bug #70720 (strip_tags improper php code parsing). (Julien)

07 Jan 2016, PHP 5.6.17

- Core:
  . Fixed bug #66909 (configure fails utf8_to_mutf7 test). (Michael Orlitzky)
  . Fixed bug #70958 (Invalid opcode while using ::class as trait method
    paramater default value). (Laruence)